fix: Updated Hero section component to use CSS Grid to align all it's content correctly.

--- a/src/components/heroSection/styles.module.css
+++ b/src/components/heroSection/styles.module.css
@@ -1,59 +1,100 @@
-/**
- * Copyright (c) Facebook, Inc. and its affiliates.
- *
- * This source code is licensed under the MIT license found in the
- * LICENSE file in the root directory of this source tree.
- */
-
-.section {
-  padding: 72px 0;
-}
-
-.sectionAlt {
-  background-color: var(--ifm-color-emphasis-100);
-}
-
-.sectionInner {
-  margin: 0 auto;
-}
-
-.announcement {
-  font-weight: bold;
-  font-size: 24px;
-  padding: 48px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.announcementDark {
-  background-color: #20232a;
-  color: #fff;
-}
-
-.announcementInner {
-  margin: 0 auto;
-  max-width: 768px;
-}
-
-.hero {
+.HeroContainer {
+  display: grid;
+  grid-template-columns: 1.2fr 0.8fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    'HeroContent HeroImage'
+    'CallToActions HeroImage';
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  height: 400px;
   background-color: #2b3137;
-  padding: 48px;
+  overflow: hidden;
+  padding: 10px;
 }
 
-.heroInner {
-  margin: 0 auto;
-  max-width: 1100px;
-  padding: 0 20px;
+.HeroContent {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px 0px;
+  grid-template-areas:
+    'HeroTitle'
+    'HeroDescription';
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  grid-area: HeroContent;
 }
 
-.heroProjectTagline {
-  color: #fff;
-  font-size: 50px;
-  margin: 0;
-}
-
-.heroTitleTextHtml b {
+.HeroTitle {
+  grid-area: HeroTitle;
   color: var(--ifm-color-primary);
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.HeroDescription {
+  grid-area: HeroDescription;
+  color: #fff;
+  font-size: 30px;
+}
+
+.CallToActions {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px 10px;
+  grid-template-areas:
+    'ctaButtons'
+    'SocialButtons';
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+  justify-self: center;
+  align-self: center;
+  grid-area: CallToActions;
+}
+
+.ctaButtons {
+  grid-area: ctaButtons;
+  text-transform: uppercase;
+}
+
+.ctaButtons a {
+  margin: 5px;
+}
+
+.SocialButtons {
+  grid-area: SocialButtons;
+}
+
+.SocialButtons span {
+  padding: 5px;
+}
+
+.HeroImage {
+  animation-duration: 2s;
+  animation-name: jackInTheBox;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  margin-top: 20px;
+  grid-area: HeroImage;
+}
+
+.HeroLogo {
+  width: 500px;
+  height: 375px;
+  object-fit: cover;
+  border-radius: 10%;
 }
 
 @keyframes jackInTheBox {
@@ -74,76 +115,5 @@
   to {
     opacity: 1;
     transform: scale(1);
-  }
-}
-
-.heroLogo {
-  animation-duration: 2s;
-  animation-name: jackInTheBox;
-  float: right;
-  margin-top: 20px;
-  padding: 0 20px 20px;
-  object-fit: cover;
-  object-position: 100% 0%;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-}
-
-.indexCtas {
-  --ifm-button-size-multiplier: 1.6;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: 24px;
-}
-
-.indexCtas a:last-of-type {
-  margin: 20px 36px;
-}
-
-.indexCtasGitHubButtonWrapper {
-  display: flex;
-}
-
-.indexCtasGitHubButton {
-  overflow: hidden;
-}
-
-.indexCtaTryNowButton:hover {
-  color: var(--ifm-color-primary);
-}
-
-@media only screen and (max-width: 768px) {
-  .hero {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .heroInner {
-    padding: 0;
-  }
-
-  .heroProjectTagline {
-    font-size: 36px;
-    text-align: center;
-  }
-
-  .heroLogo {
-    display: block;
-    float: none;
-    margin: 0 auto;
-  }
-
-  .indexCtas {
-    justify-content: center;
-  }
-
-  .indexCtas a {
-    margin: 20px 36px;
-  }
-
-  .indexCtasGitHubButton {
-    display: none;
   }
 }
